<resources>
    <string name="app_name">SCAN</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_manage_relations">Manage Relations</string>
    <string name="title_activity_manage_persons">Manage Persons</string>
    <string name="title_send_data">Send Data</string>

    <!-- Preference Titles -->
    <string name="settings_server_header">Server</string>
    <string name="settings_email_header">Email</string>
    <string name="settings_sending_option_header">Sending option</string>
    <string name="settings_delete_option_header">Clear data</string>
    <string name="settings_get_option_header">Get fields</string>

    <!-- Sending Option Preferences -->
    <string name="settings_sending_option_title">Sending option</string>
    <string name="show_relations_boolean_key" translatable="false">show_relations_boolean_key</string>
    <string name="settings_sending_option_key" translatable="false">default_sending_option</string>

    <!-- Server Preferences -->
    <string name="settings_server_token_title">Token Server</string>
    <string name="settings_server_ip_port_title">Server address</string>
    <string name="settings_server_maj_title">Auto update</string>
    <string name="settings_server_maj_off">Deactivated</string>
    <string name="settings_server_maj_on">Activated</string>

    <string name="settings_server_token_key" translatable="false">default_server_token</string>
    <string name="settings_server_ip_port_key" translatable="false">default_server_ip_port_key</string>
    <string name="settings_server_maj_auto_key" translatable="false">default_server_maj_auto</string>

    <string name="url_not_valid">The URL you entered is not valid</string>

    <!-- Email Preferences -->
    <string name="settings_email_category" translatable="false">settings_email_category</string>
    <string name="settings_email_default_title">Submitting Email Address</string>

    <string name="settings_email_default_key" translatable="false">default_email_destination_key</string>

    <!-- Delete Preferences -->
    <string name="settings_delete_option_key" translatable="false">settings_delete</string>

    <string name="settings_delete_button_key" translatable="false">delete_button</string>
    <string name="settings_delete_button_title">Clear</string>
    <string name="settings_delete_button_summary">Delete the files on this device</string>

    <!-- Get Preferences -->
    <string name="settings_get_button_summary">Force get Fields and List data from the web</string>
    <string name="settings_get_button_title">Force Get</string>
    <string name="settings_get_button_key" translatable="false">get_button</string>
    <string name="settings_get_option_key" translatable="false">settings_get</string>
    <string name="toast_get_processing">Force get Fields is processing…</string>

    <!-- Alert Dialog Messages -->
    <!-- Strings Submit status -->
    <string name="main_submit_success_title">Submit successful</string>
    <string name="main_submit_fail_title">Submit failed</string>
    <string name="main_submit_success_msg">The submitting was a success. You can now delete the files</string>
    <string name="main_submit_fail_msg">An unknown error was encountered, please try again later</string>

    <!-- Strings Get status -->
    <string name="main_get_success_msg">New configuration files were downloaded</string>
    <string name="main_get_fail_msg">No new configuration files were downloaded</string>

    <!-- Strings Submit server settings error -->
    <string name="main_submit_ip_port_fail_title">Server address</string>
    <string name="main_submit_ip_port_fail_msg">Please enter the IP address and the port number values in the settings</string>
    <string name="main_submit_token_fail_title">Token Value</string>
    <string name="main_submit_token_fail_msg">Please enter a value of the token in the settings</string>
    <string name="no_submit_option_title">Submit option</string>
    <string name="no_submit_option_msg">Please select a submit option</string>

    <!-- Strings Passwords hashing messages -->

    <!-- Strings Alert Dialog Button Messages -->
    <string name="change_settings">GO TO SETTINGS</string>

    <!-- Strings toast delete files -->
    <string name="toast_delete_success">Deletion successful</string>
    <string name="toast_delete_fail">Deletion failed</string>
    <string name="toast_delete_processing">Deletion ...</string>

    <!-- Alert message for no Best Descriptive Value-->
    <string name="no_bdv_title">No Best Descriptive Value = application is unusable</string>
    <string name="no_bdv_message">Ask your admin to add a Best Descriptive Value field to your team, in its current state, the application is unusable.</string>
    <string name="no_bdv_confirmation">Exit</string>

    <!-- Add Relations Alerts-->
    <string name="toast_already_existing_relation">This relation already exists</string>
    <string name="toast_same_person_relation">The persons of a relation must be different</string>
    <string name="toast_relation_type_non_selected">You must select a valid relation</string>
    <string name="toast_person_not_selected">You must select persons by clicking on the dropdown menu</string>

    <!-- Activity names -->
    <string name="add_person_activity_title">Add Person</string>
    <string name="add_relation_activity_title">Add Relation</string>
    <string name="display_details_relation_activity_title">Details Relation</string>
    <string name="display_details_person_activity_title">Details Person</string>
    <string name="manage_persons_activity_title">Manage Persons</string>
    <string name="manage_relations_activity_title">Manage Relations</string>
    <string name="toast_fields_required">Those fields are required:</string>

    <string name="config_files" translatable="false">/config</string>
    <string name="filename_ids" translatable="false">/ids.json</string>
    <string name="filename_fields" translatable="false">/fields.json</string>
    <string name="unique_id_filename" translatable="false">/android_id.txt</string>

    <string name="directory_files" translatable="false">/cases</string>
    <string name="filename_persons" translatable="false">/persons.json</string>
    <string name="filename_persons_server_id" translatable="false">/persons_id.json</string>
    <string name="filename_relations_server_id" translatable="false">/relations_id.json</string>
    <string name="filename_relations" translatable="false">/relations.json</string>

    <string name="age_title">Age: </string>
    <string name="sex_title">Sex: </string>

    <string name="button_edit_title">Edit</string>
    <string name="button_delete_title">Delete</string>
    <string name="button_add_relation_to">+To</string>
    <string name="button_add_relation_from">+From</string>
    <string name="details_title_full_name">Informations</string>
    <string name="button_show_relations_title">Show relations</string>
    <string name="button_hide_relations_title">Hide relations</string>

    <string name="relation_from_indication">From</string>
    <string name="relation_type_indication">Relation</string>
    <string name="relation_to_indication">To</string>
    <string name="relation_comment_indication">Comments</string>

    <string name="button_relation_save_title">Save</string>
    <string name="button_relation_cancel_title">Cancel</string>

    <string name="delete_person_title">Delete Person</string>
    <string name="delete_person_message">Do you really want to delete this person from the application?</string>

    <string name="delete_relation_title">Delete Relation</string>
    <string name="delete_relation_message">Do you really want to delete this relation from the application?</string>

    <string name="error_unique_id">Unique format not valid, must be 3 letters</string>
    <string name="invalid_format">Invalid format</string>

    <string name="delete_files_title">Delete files</string>
    <string name="delete_files_message">Do you really want to delete the files?</string>

    <string name="yes">Yes</string>
    <string name="relation_indication">Relation</string>
    <string name="filename_synced_relations" translatable="false">/synced_relations.json</string>
    <string name="filename_synced_persons" translatable="false">/synced_persons.json</string>

    <string name="toast_save_failed">Saving of the new Person has failed</string>

    <string name="crew_id_path" translatable="false">/crew_id.json</string>

    <string name="team_change_title">Your Team has changed !</string>
    <string name="team_change_message">This involves a new form for creating people, all currently unsynchronised data stored in your application will be lost. You can save them below by sending them by email.</string>
    <string name="team_change_send_mail">Upload old data by email</string>
    <string name="team_change_confirmation">Continue (old data will be lost)</string>

    <string name="change_team_back_title">Be careful!</string>
    <string name="change_team_back_message">Did you send your data by email?</string>
    <string name="change_team_back_yes">Yes, delete old data & change team</string>
    <string name="change_team_back_send_mail">No, upload old data by email</string>

</resources>