<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_sending_option_header">

        <ListPreference
            app:key="@string/settings_sending_option_key"
            app:title="@string/settings_sending_option_title"
            app:defaultValue="send_by_email"
            app:entries="@array/settings_sending_option_entries"
            app:entryValues="@array/settings_sending_option_values"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_server_header">

        <EditTextPreference
            app:key="@string/settings_server_token_key"
            app:title="@string/settings_server_token_title"
            app:useSimpleSummaryProvider="false"/>

        <EditTextPreference
            app:key="@string/settings_server_ip_port_key"
            app:title="@string/settings_server_ip_port_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:key="@string/settings_server_maj_auto_key"
            app:title="@string/settings_server_maj_title"
            app:switchTextOff="@string/settings_server_maj_off"
            app:switchTextOn="@string/settings_server_maj_on"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_email_header"
        app:key="@string/settings_email_category">

        <EditTextPreference
            app:key="@string/settings_email_default_key"
            app:title="@string/settings_email_default_title"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_delete_option_header"
        app:key="@string/settings_delete_option_key">

        <Preference
            app:key="@string/settings_delete_button_key"
            app:title="@string/settings_delete_button_title"
            app:summary="@string/settings_delete_button_summary"
            />

    </PreferenceCategory>

</PreferenceScreen>