<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/main_activity_settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:text="@string/title_activity_settings"
        app:backgroundTint="#EA5252"
        app:icon="@android:drawable/ic_menu_preferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_activity_manage_persons_btn"
        android:layout_width="300dp"
        android:layout_height="125dp"
        android:text="@string/title_activity_manage_persons"
        android:textColor="#000000"
        app:backgroundTint="#22000000"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_manage_relations_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_settings_btn" />

    <Button
        android:id="@+id/main_activity_manage_relations_btn"
        android:layout_width="300dp"
        android:layout_height="125dp"
        android:text="@string/title_activity_manage_relations"
        android:textColor="#000000"
        app:backgroundTint="#22000000"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_send_data_btn"
        app:layout_constraintEnd_toEndOf="@+id/main_activity_manage_persons_btn"
        app:layout_constraintStart_toStartOf="@+id/main_activity_manage_persons_btn"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_manage_persons_btn" />

    <Button
        android:id="@+id/main_activity_send_data_btn"
        android:layout_width="300dp"
        android:layout_height="125dp"
        android:text="@string/title_send_data"
        android:textColor="#000000"
        app:backgroundTint="#22000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_activity_manage_relations_btn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/main_activity_manage_relations_btn"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_manage_relations_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>