<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageRelationsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/add_relation_from_indication"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/relation_from_indication"
                android:layout_weight="1">
            </TextView>

            <AutoCompleteTextView
                android:id="@+id/add_relation_from"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Phil"
                android:layout_weight="1">
            </AutoCompleteTextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/add_relation_type_indication"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/relation_type_indication"
                android:layout_weight="1">
            </TextView>

            <Spinner
                android:id="@+id/add_relation_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/add_relation_to_indication"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/relation_to_indication"
                android:layout_weight="1">
            </TextView>

            <AutoCompleteTextView
                android:id="@+id/add_relation_to"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Maryse">
            </AutoCompleteTextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_relation_comments_indication"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/relation_comment_indication">
        </TextView>

        <EditText
            android:id="@+id/add_relation_comments"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/display_add_relation_save"
            android:text="@string/button_relation_save_title"
            android:backgroundTint="@color/forestgreen"
            android:layout_margin="5dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/display_add_relation_cancel"
            android:text="@string/button_relation_cancel_title"
            android:backgroundTint="@color/red"
            android:layout_margin="5dp"/>
    </LinearLayout>

</LinearLayout>