<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Title fullname person -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:layout_margin="5dp"
            android:id="@+id/details_title_full_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_title_full_name"
            android:textSize="32sp"
            android:layout_margin="5dp" />

    </LinearLayout>

    <!-- Layouts avec les ListViews -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- Layout From Relations -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/customborder"
            android:id="@+id/linearlayout_relations_from"
            android:visibility="gone"
            android:orientation="vertical">


            <!-- Layout Add Relation button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/display_person_add_relation_from"
                    android:backgroundTint="@color/forestgreen"
                    android:text="@string/button_add_relation_from" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:id="@+id/list_relations_from"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp" />
            </LinearLayout>


        </LinearLayout>

        <!-- Layout Detail Person -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <!-- Layout Buttons Modify and Delete -->

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/flexboxLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexWrap="wrap"
                app:alignContent="flex_start">

                <Button
                    android:id="@+id/display_person_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue_doge"
                    android:text="@string/button_edit_title"
                    android:scaleType="centerCrop"
                    android:layout_margin="5dp" />

                <Button
                    android:id="@+id/display_person_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/red"
                    android:text="@string/button_delete_title"
                    android:scaleType="centerCrop"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/display_person_show_relations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/button_show_relations_title"
                    android:scaleType="centerCrop"
                    android:layout_margin="5dp"/>

            </com.google.android.flexbox.FlexboxLayout>

<!--            <RelativeLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->

<!--                <Button-->
<!--                    android:id="@+id/display_person_edit"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:backgroundTint="@color/blue_doge"-->
<!--                    android:text="@string/button_edit_title"-->
<!--                    android:layout_alignParentStart="true"-->
<!--                    android:layout_margin="5dp"/>-->

<!--                <Button-->
<!--                    android:id="@+id/display_person_delete"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:backgroundTint="@color/red"-->
<!--                    android:text="@string/button_delete_title"-->
<!--                    android:layout_toEndOf="@+id/display_person_edit"-->
<!--                    android:layout_margin="5dp"/>-->

<!--                <Button-->
<!--                    android:id="@+id/display_person_show_relations"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:backgroundTint="@color/purple_500"-->
<!--                    android:text="@string/button_show_relations_title"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:layout_margin="5dp"/>-->

<!--            </RelativeLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ListView
                    android:id="@+id/list_details_person"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

        <!-- Layout To Relations -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/customborder"
            android:visibility="gone"
            android:id="@+id/linearlayout_relations_to"
            android:orientation="vertical">

            <!-- Layout Add Relation button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/display_person_add_relation_to"
                    android:backgroundTint="@color/forestgreen"
                    android:text="@string/button_add_relation_to" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:id="@+id/list_relations_to"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>